# calculatrice_simple

./: README.md  README_en.md  README_fr.md  pyproject.toml
src/: main.py
