[project]
name = "calc-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "flet==0.27.6"
]


# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "calc-app"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}